--- a/root-app.yaml
+++ b/root-app.yaml
@@ -16,7 +16,7 @@ spec:
     path: .
     directory:
       recurse: false  # Don't recurse into subdirectories
-      include: '{argocd-app.yaml,website-app.yaml}'  # Only these files
+      include: '{website-app.yaml}'  # Only these files
   
   destination:
     server: https://kubernetes.default.svc
