--- a/website-app.yaml
+++ b/website-app.yaml
@@ -11,7 +11,7 @@ spec:
   
   source:
     repoURL: https://github.com/Himansri21/gitops # ← Your actual repo name
-    targetRevision: main
+    targetRevision: master
     path: k8s
   
   destination:
